--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,26 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/lendbuzz/31849db5-f31a-456e-b81e-796fbadfe964'>Lendbuzz - Design Intern</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lockton.referrals.selectminds.com/jobs/brand-communications-intern-1839'>Brand & Communications Intern - Lockton Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/oGUrbfwW'>Internet Brands Careers - Customer Success Manager</a></h5> 
+<p><span class="badge badge-light">Los Angeles, California  Los Angeles</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/oGdsbfwg'>Internet Brands Careers - Service Delivery Manager</a></h5> 
+<p><span class="badge badge-light">San Diego, California</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/oaNrbfwj'>Internet Brands Careers - Associate Editor</a></h5> 
+<p><span class="badge badge-light">Los Angeles, California</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='http://sportsrecruitsllc.applytojob.com/apply/SzXjwOjXEj/Customer-Success-Event-Operations-Paid-Internship-Summer-2020'>Customer Success & Event Operations - Paid Internship (Summer 2020) - SportsRecruits - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
@@ -69,7 +89,7 @@
 <p><span class="badge badge-light">Concord Concord</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sharpist.join.com/jobs/475600-internship-business-development-m-f-x'>Job @ Sharpist (Berlin): Internship: Business Deve... | JOIN</a></h5> 
+<h5><a href='https://sharpist.join.com/jobs/475600-internship-business-development-m-f-x'>Job @ Sharpist (Berlin): Internship: Business Deve... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -263,7 +283,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://computing.llnl.gov/careers/internships/intern-hiring-process'>Careers: Internship Program | Intern Hiring Process | Computing</a></h5> 
+<h5><a href='https://computing.llnl.gov/careers/internships/intern-hiring-process'>Careers: Internship Program | Intern Hiring Process | Computing</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -279,7 +299,7 @@
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/fr/o/data-analystdata-engineer-internship'>
+<h5><a href='https://helloprint.recruitee.com/l/fr/o/data-analystdata-engineer-internship'>
       Data Analyst/Data Engineer Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -343,7 +363,7 @@
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/studio71us/c6c75bc2-1411-45c0-8d51-d76fd3b65371'>Studio71 - Ad Ops Internship Winter 2020 - Los Angeles</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/studio71us/c6c75bc2-1411-45c0-8d51-d76fd3b65371'>Studio71 - Ad Ops Internship Winter 2020 - Los Angeles</a></h5> 
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles Berlin New York Toronto London Paris</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -367,7 +387,7 @@
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles Berlin New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/moveonorg/jobs/1942494'>Job Application for Communications Intern (Press Focus) at MoveOn.org</a></h5> 
+<h5><a href='https://boards.greenhouse.io/moveonorg/jobs/1942494'>Job Application for Communications Intern (Press Focus) at MoveOn.org</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -428,7 +448,7 @@ International Design | San Francisco ? Software Engineer Intern, Adobe XD | San
 <p><span class="badge badge-light">S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698643243-adjoint-e-a-la-direction-et-coordonnateur-rice-evenements-internes'>Ubisoft Adjoint(e) ? la Direction et Coordonnateur(rice) ?v?nements internes | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698643243-adjoint-e-a-la-direction-et-coordonnateur-rice-evenements-internes'>Ubisoft Adjoint(e) ? la Direction et Coordonnateur(rice) ?v?nements internes | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -439,26 +459,6 @@ International Design | San Francisco ? Software Engineer Intern, Adobe XD | San
 <h5><a href='https://www.indeed.com/job/event-network-intern-bcd81bba7896aa32'>Event &amp; Network Intern - Brooklyn, NY 11201 - Indeed.com</a></h5> 
 <p><span class="badge badge-light">Brooklyn, NY New York  Brooklyn, NY New York</span></p>
 <p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='https://www.indeed.com/job/partnership-communication-intern-d6afb547917deb6d'>Partnership &amp; Communication Intern - Brooklyn, NY 11201 - Indeed.com</a></h5> 
-<p><span class="badge badge-light">Brooklyn, NY New York  Brooklyn, NY New York</span></p>
-<p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/vmlyr/job/objqbfwP'>VMLY&R Careers - Intern - Finance</a></h5> 
-<p><span class="badge badge-light">New York, New York</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://www.careerconnections.ca/job/meat-processing-internship/'>Meat Processing Internship | Nova Scotia Works: Career Connections</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/dataiku/9fadf0b6-b87b-4fd0-bd72-d642679dc90b'>Dataiku - Software Engineer Intern - Interactive Data Preparation</a></h5> 
-<p><span class="badge badge-light">Paris, France</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/dataiku/a4e06a5b-0bcf-4613-9daf-2fb40a8c7eab'>Dataiku - Software Engineer Intern - Fuzzy Join</a></h5> 
-<p><span class="badge badge-light">Paris, France</span></p>
-<p>Posted on: 2019-11-01</p>
 <hr/>
 
 
